--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,7 +12,6 @@
     "react-ga": "^3.3.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
