--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,71 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [main]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+
+  Deploy_to_GAE:
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Checkout Repo
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+        uses: actions/checkout@v2
+
+      - name: Load Config Files
+
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+
+          echo "${{secrets.GAE_CONFIG}}" | base64 --decode > config/gae.env 
+
+          echo "${{secrets.GCP_SA_KEY}}" > config/portfolio-v1-5606eddf4394.json
+
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v
+
+        with:
+
+          node-version: 14.x
+
+
+
+            - run: npm install
+
+      - run: npm run test
+
+
+
+      - name: Setup Google Cloud SDK
+
+        uses: google-github-actions/setup-gcloud@v0.2.0
+
+        with:
+
+          project_id: ${{secrets.PROJECT_ID}}
+
+          service_account_key: ${{secrets.GCP_SA_KEY}}
+
+
+
+      - name: Deploy
+
+        uses: google-github-actions/deploy-appengine@v0.2.0
+
+        with:
+
+          deliverables: app.yaml
+
+          project_id: ${{ secrets.PROJECT_ID }}
+
+          credentials: ${{ secrets.GCP_SA_KEY }}
+
+          promote: true
+
+          version: v1
