--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,68 +1,38 @@
 name: Deploy
-
 on:
-
   push:
-
-    branches: [main]
-
+    branches: [ main ]
 jobs:
-
   Deploy_to_GAE:
-
     runs-on: ubuntu-latest
-
     steps:
-
       - name: Checkout Repo
-
         uses: actions/checkout@v2
 
       - name: Load Config Files
-
         run: |
-
           echo "${{secrets.GAE_CONFIG}}" | base64 --decode > config/gae.env 
-
           echo "${{secrets.GCP_SA_KEY}}" > config/portfolio-v1-5606eddf4394.json
 
-
       - name: Setup Node.js
-        uses: actions/setup-node@v
-
+        uses: actions/setup-node@v2
         with:
+          node-version: 16.x
 
-          node-version: 14.x
-      - run: yarn install
-
-      - run: yarn test
-
-
+      - run: npm install
+      - run: npm run test
 
       - name: Setup Google Cloud SDK
-
         uses: google-github-actions/setup-gcloud@v0.2.0
-
         with:
-
           project_id: ${{secrets.PROJECT_ID}}
-
           service_account_key: ${{secrets.GCP_SA_KEY}}
 
-
-
       - name: Deploy
-
         uses: google-github-actions/deploy-appengine@v0.2.0
-
         with:
-
           deliverables: app.yaml
-
           project_id: ${{ secrets.PROJECT_ID }}
-
           credentials: ${{ secrets.GCP_SA_KEY }}
-
           promote: true
-
           version: v1
