--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
         with:
           node-version: 16.x
 
-      - run: npm install
+      - run: yarn install
+      - run: yarn build
 #      - run: npm run test
 
       - name: Setup Google Cloud SDK
