--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 16.x
 
       - run: yarn install
-      - run: yarn build
+      - run: CI=false yarn build
 #      - run: npm run test
 
       - name: Setup Google Cloud SDK
