--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
     "react-redux": "^7.2.4",
-    "react-responsive": "^8.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "6",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.53.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -40,7 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "sass": "^1.52.3"
-  }
+  "devDependencies": {}
 }
