add 18n library to use languages

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Gustavo Personal Portfolio",
-  "name": "Gustavo Gomez | Software Developer",
+  "name": "Gustavo Gomez | Software Engineer",
   "icons": [
     {
       "src": "favicon.ico",
