--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
+    "react-i18next": "^11.18.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "6",
     "react-scripts": "^5.0.1",
