--- a/.github/workflows/stg.yml
+++ b/.github/workflows/stg.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16.x
 
-      - run: npm run install
+      - run: npm install
       - run: npm run build
       #      - run: npm run test
 
