github actions for nextjs branch

--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,11 @@
+# [START app_yaml]
 runtime: nodejs18
+
+service: my-next-app
+
 handlers:
-  # Serve all static files with url ending with a file extension
-  - url: /(.*\..+)$
-    static_files: build/\1
-    upload: build/(.*\..+)$
-  # Catch all handler to index.html
   - url: /.*
-    static_files: build/index.html
-    upload: build/index.html
+    secure: always
+    script: auto
+
+# [END app_yaml]
