--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.2",
+    "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-scroll-parallax": "^3.4.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
