--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "i18next": "^23.14.0",
-    "i18next-browser-languagedetector": "^8.0.0",
     "next": "14.2.7",
+    "next-intl": "^3.19.1",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-i18next": "^15.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
