--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.7",
+    "@next/third-parties": "^14.2.9",
+    "next": "^14.2.9",
     "next-intl": "^3.19.1",
     "next-themes": "^0.3.0",
     "react": "^18",
