--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,6 @@ jobs:
             --image gcr.io/${{ secrets.PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME_PROD }}:latest \
             --platform managed \
             --region us-central1 \
-            --allow-unauthenticated
+            --allow-unauthenticated \
+            --set-env-vars "NEXT_PUBLIC_ENV_PROD=true"
+          
