use env var to load GA just con prod, not stg

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,9 +36,13 @@ jobs:
         run: |
           gcloud auth configure-docker
 
+      - name: Create .env.prod file
+        run: |
+          echo "SERVICE_ENV=PROD" >> .env.prod
+
       - name: Build and Push Docker Image
         run: |
-          docker build -t gcr.io/${{ secrets.PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME_PROD }}:latest .
+          docker build --build-arg ENV_FILE=.env.prod -t gcr.io/${{ secrets.PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME_PROD }}:latest .
           docker push gcr.io/${{ secrets.PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME_PROD }}:latest
 
       - name: Deploy to Cloud Run
