--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,4 +51,8 @@ jobs:
             --image gcr.io/${{ secrets.PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME_PROD }}:latest \
             --platform managed \
             --region us-central1 \
-            --allow-unauthenticated
+            --allow-unauthenticated \
+            --execution-environment gen2 \
+            --memory 1Gi \
+            --cpu 1 \
+            --max-instances 10
