--- a/.github/workflows/stg.yml
+++ b/.github/workflows/stg.yml
@@ -7,9 +7,6 @@ on:
   push:
     branches:
       - nextjs
-  pull_request:
-    branches:
-      - nextjs
   workflow_dispatch:
     inputs:
         logLevel:
@@ -51,4 +48,8 @@ jobs:
             --image gcr.io/${{ secrets.PROJECT_ID_STG }}/${{ secrets.DOCKER_IMAGE_NAME_STG }}:latest \
             --platform managed \
             --region us-central1 \
-            --allow-unauthenticated 
+            --allow-unauthenticated \
+            --execution-environment gen2 \
+            --memory 1Gi \
+            --cpu 1 \
+            --max-instances 10
